# spbu-anticheat-project

./: .env.sample  .gitignore  .s3.env.sample  .tool-versions  .yamllint.yml  LICENSE  README.md  deploy_local.bat  docker-compose.yml  run_local.bat  studyfair.lnk  t.sh
mutator/: .flake8  Dockerfile  README.md  display_cst.py  mutator.py  pyproject.toml  pyvenv.cfg  requirements.txt  test.py
mutator/data/python/: 0.py  1.py  3.py
mutator/examples/: input.py  mDL.py
mutator/mutations/: base.py  injection_trace.py  mDL.py  mIL.py  mRLN.py  mRLS.py  mSDL.py  mSIL.py  registry.py
mutator/mutations/data/: parameter-names-registry.txt
mutator/test/fixtures/mIL/inputs/: 1.py
mutator/test/fixtures/mIL/outputs/: 1.py
mutator/test/mutations/: test_mIL.py  test_mRLNS.py  test_mSDL.py
mutator/transformers/: abstract_transformer.py  function_definition_transformer.py  literal_value_transformer.py  single_statement_line_inserter.py  single_statement_line_remover.py
mutator/type_definitions/: function_path.py
mutator/utils/: display_cst.py  do_tokenize.py  evaluate.py  split_module.py  tokenizer.py  tt.py
mutator/visitors/: abstract_visitor.py  function_body_visitor.py  function_definition_visitor.py  function_invocation_visitor.py  literal_values_visitor.py  single_statement_line_collector.py
tokenizer/python/: Dockerfile  evaluator.py  pyproject.toml  split_module.py  tokenizer.py
tokenizer/python/test/: test_evaluator.py
tokenizer/python/visitors/: function_definition_visitor.py  function_invocation_visitor.py  single_statement_line_collector.py
(+439 files in other folders)
