[tool.poetry]
name = "mutator"
version = "0.1.0"
description = "AST-based general-purpose Python ~>3.11 mutator"
authors = ["viralpraxis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
libcst = "1.3.0"
tokenizer = "^3.4.3"
typing_extensions = "4.5.0"
flake8 = "7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
